--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,10 @@
 version '1.0-SNAPSHOT'
 
 apply plugin: 'java'
+apply plugin: 'groovy'
 
-sourceCompatibility = 1.5
+
+sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
@@ -10,4 +12,8 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
+    compile "io.vavr:vavr:0.9.0"
+    compile 'org.codehaus.groovy:groovy-all:2.3.11'
+    testCompile "org.spockframework:spock-core:1.1-groovy-2.4"
+    compileOnly 'org.projectlombok:lombok:1.16.20'
 }
